--- a/Makefile.psp
+++ b/Makefile.psp
@@ -1,6 +1,7 @@
 TARGET_LIB = libSDL2.a
 OBJS= src/SDL.o \
       src/SDL_assert.o \
+      src/SDL_dataqueue.o \
       src/SDL_error.o \
       src/SDL_hints.o \
       src/SDL_log.o \
@@ -31,7 +32,7 @@ OBJS= src/SDL.o \
       src/joystick/psp/SDL_sysjoystick.o \
       src/power/SDL_power.o \
       src/power/psp/SDL_syspower.o \
-      src/filesystem/dummy/SDL_sysfilesystem.o \
+      src/filesystem/psp/SDL_sysfilesystem.o \
       src/render/SDL_render.o \
       src/render/SDL_yuv_sw.o \
       src/render/psp/SDL_render_psp.o \
@@ -70,16 +71,22 @@ OBJS= src/SDL.o \
       src/video/SDL_blit_slow.o \
       src/video/SDL_bmp.o \
       src/video/SDL_clipboard.o \
+      src/events/SDL_displayevents.o \
       src/video/SDL_fillrect.o \
       src/video/SDL_pixels.o \
       src/video/SDL_rect.o \
       src/video/SDL_stretch.o \
       src/video/SDL_surface.o \
       src/video/SDL_video.o \
+      src/video/SDL_yuv.o \
+      src/video/yuv2rgb/yuv_rgb.o \
       src/video/psp/SDL_pspevents.o \
       src/video/psp/SDL_pspvideo.o \
       src/video/psp/SDL_pspgl.o \
-      src/video/psp/SDL_pspmouse.o
+      src/video/psp/SDL_pspmouse.o \
+      src/video/psp/SDL_pspmessagebox.o \
+      src/joystick/virtual/SDL_virtualjoystick.o \
+      src/loadso/dummy/SDL_sysloadso.o
 
 INCDIR = ./include
 CFLAGS = -g -O2 -G0 -Wall -D__PSP__ -DHAVE_OPENGL
