--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -251,7 +251,7 @@ if(APPLE OR ARCH_64 OR MSVC_CLANG)
     set(OPT_DEF_SSEMATH ON)
   endif()
 endif()
-if(UNIX OR MINGW OR MSYS OR (USE_CLANG AND NOT WINDOWS) OR VITA OR PSP)
+if(UNIX OR MINGW OR MSYS OR (USE_CLANG AND NOT WINDOWS) OR VITA OR PSP OR PS2)
   set(OPT_DEF_LIBC ON)
 endif()
 
@@ -356,7 +356,7 @@ if(EMSCRIPTEN)
   set(SDL_TEST_ENABLED_BY_DEFAULT OFF)
 endif()
 
-if(VITA OR PSP)
+if(VITA OR PSP OR PS2)
   set(SDL_SHARED_ENABLED_BY_DEFAULT OFF)
   set(SDL_LOADSO_ENABLED_BY_DEFAULT OFF)
 endif()
@@ -2505,6 +2505,76 @@ elseif(PSP)
       pspaudio
       pspvram
       GL
+    )
+
+elseif(PS2)
+  file(GLOB PS2_MAIN_SOURCES ${SDL2_SOURCE_DIR}/src/main/ps2/*.c)
+  set(SDLMAIN_SOURCES ${SDLMAIN_SOURCES} ${PS2_MAIN_SOURCES})
+  
+  set(SDL_ATOMIC_DISABLED 1)
+
+  if(SDL_AUDIO)
+    # set(SDL_AUDIO_DRIVER_PS2 1)
+    set(SDL_AUDIO_DRIVER_PS2 0)
+    file(GLOB PS2_AUDIO_SOURCES ${SDL2_SOURCE_DIR}/src/audio/ps2/*.c)
+    set(SOURCE_FILES ${SOURCE_FILES} ${PS2_AUDIO_SOURCES})
+    # set(HAVE_SDL_AUDIO TRUE)
+    set(HAVE_SDL_AUDIO FALSE)
+  endif()
+  if(SDL_FILESYSTEM)
+    # set(SDL_FILESYSTEM_PS2 1)
+    set(SDL_FILESYSTEM_PS2 0)
+    file(GLOB PS2_FILESYSTEM_SOURCES ${SDL2_SOURCE_DIR}/src/filesystem/ps2/*.c)
+    set(SOURCE_FILES ${SOURCE_FILES} ${PS2_FILESYSTEM_SOURCES})
+    # set(HAVE_SDL_FILESYSTEM TRUE)
+    set(HAVE_SDL_FILESYSTEM FALSE)
+  endif()
+  if(SDL_JOYSTICK)
+    # set(SDL_JOYSTICK_PS2 1)
+    set(SDL_JOYSTICK_PS2 0)
+    file(GLOB PS2_JOYSTICK_SOURCES ${SDL2_SOURCE_DIR}/src/joystick/ps2/*.c)
+    set(SOURCE_FILES ${SOURCE_FILES} ${PS2_JOYSTICK_SOURCES})
+    # set(HAVE_SDL_JOYSTICK TRUE)
+    set(HAVE_SDL_JOYSTICK FALSE)
+  endif()
+  if(SDL_POWER)
+    # set(SDL_POWER_PS2 1)
+    set(SDL_POWER_PS2 0)
+    file(GLOB PS2_POWER_SOURCES ${SDL2_SOURCE_DIR}/src/power/ps2/*.c)
+    set(SOURCE_FILES ${SOURCE_FILES} ${PS2_POWER_SOURCES})
+    # set(HAVE_SDL_POWER TRUE)
+    set(HAVE_SDL_POWER FALSE)
+  endif()
+  if(SDL_THREADS)
+    # set(SDL_THREAD_PS2 1)
+    set(SDL_THREAD_PS2 0)
+    file(GLOB PS2_THREAD_SOURCES ${SDL2_SOURCE_DIR}/src/thread/generic/SDL_systls.c ${SDL2_SOURCE_DIR}/src/thread/ps2/*.c)
+    set(SOURCE_FILES ${SOURCE_FILES} ${PS2_THREAD_SOURCES})
+    # set(HAVE_SDL_THREADS TRUE)
+    set(HAVE_SDL_THREADS FALSE)
+  endif()
+  if(SDL_TIMERS)
+    # set(SDL_TIMER_PS2 1)
+    set(SDL_TIMER_PS2 0)
+    file(GLOB PS2_TIMER_SOURCES ${SDL2_SOURCE_DIR}/src/timer/ps2/*.c)
+    set(SOURCE_FILES ${SOURCE_FILES} ${PS2_TIMER_SOURCES})
+    # set(HAVE_SDL_TIMERS TRUE)
+    set(HAVE_SDL_TIMERS FALSE)
+  endif()
+  if(SDL_VIDEO)
+    # set(SDL_VIDEO_DRIVER_PS2 1)
+    set(SDL_VIDEO_DRIVER_PS2 0)
+    # set(SDL_VIDEO_RENDER_PS2 1)
+    set(SDL_VIDEO_RENDER_PS2 0)
+    file(GLOB PS2_VIDEO_SOURCES ${SDL2_SOURCE_DIR}/src/video/ps2/*.c)
+    set(SOURCE_FILES ${SOURCE_FILES} ${PS2_VIDEO_SOURCES})
+    # set(SDL_VIDEO_OPENGL 1)
+    set(SDL_VIDEO_OPENGL 0)
+    # set(HAVE_SDL_VIDEO TRUE)
+    set(HAVE_SDL_VIDEO FALSE)
+  endif()
+
+  list(APPEND EXTRA_LIBS
     )
 
 elseif(OS2)
