--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2522,12 +2522,10 @@ elseif(PS2)
     set(HAVE_SDL_AUDIO FALSE)
   endif()
   if(SDL_FILESYSTEM)
-    # set(SDL_FILESYSTEM_PS2 1)
-    set(SDL_FILESYSTEM_PS2 0)
+    set(SDL_FILESYSTEM_PS2 1)
     file(GLOB PS2_FILESYSTEM_SOURCES ${SDL2_SOURCE_DIR}/src/filesystem/ps2/*.c)
     set(SOURCE_FILES ${SOURCE_FILES} ${PS2_FILESYSTEM_SOURCES})
-    # set(HAVE_SDL_FILESYSTEM TRUE)
-    set(HAVE_SDL_FILESYSTEM FALSE)
+    set(HAVE_SDL_FILESYSTEM TRUE)
   endif()
   if(SDL_JOYSTICK)
     # set(SDL_JOYSTICK_PS2 1)
