--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2536,12 +2536,8 @@ elseif(PS2)
     set(HAVE_SDL_JOYSTICK FALSE)
   endif()
   if(SDL_POWER)
-    # set(SDL_POWER_PS2 1)
-    set(SDL_POWER_PS2 0)
-    file(GLOB PS2_POWER_SOURCES ${SDL2_SOURCE_DIR}/src/power/ps2/*.c)
-    set(SOURCE_FILES ${SOURCE_FILES} ${PS2_POWER_SOURCES})
-    # set(HAVE_SDL_POWER TRUE)
-    set(HAVE_SDL_POWER FALSE)
+    set(SDL_POWER_HARDWIRED 1)
+    set(HAVE_SDL_POWER TRUE)
   endif()
   if(SDL_THREADS)
     # set(SDL_THREAD_PS2 1)
