--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2548,12 +2548,10 @@ elseif(PS2)
     set(HAVE_SDL_THREADS FALSE)
   endif()
   if(SDL_TIMERS)
-    # set(SDL_TIMER_PS2 1)
-    set(SDL_TIMER_PS2 0)
+    set(SDL_TIMER_PS2 1)
     file(GLOB PS2_TIMER_SOURCES ${SDL2_SOURCE_DIR}/src/timer/ps2/*.c)
     set(SOURCE_FILES ${SOURCE_FILES} ${PS2_TIMER_SOURCES})
-    # set(HAVE_SDL_TIMERS TRUE)
-    set(HAVE_SDL_TIMERS FALSE)
+    set(HAVE_SDL_TIMERS TRUE)
   endif()
   if(SDL_VIDEO)
     # set(SDL_VIDEO_DRIVER_PS2 1)
