--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2540,12 +2540,10 @@ elseif(PS2)
     set(HAVE_SDL_POWER TRUE)
   endif()
   if(SDL_THREADS)
-    # set(SDL_THREAD_PS2 1)
-    set(SDL_THREAD_PS2 0)
-    file(GLOB PS2_THREAD_SOURCES ${SDL2_SOURCE_DIR}/src/thread/generic/SDL_systls.c ${SDL2_SOURCE_DIR}/src/thread/ps2/*.c)
+    set(SDL_THREAD_PS2 1)
+    file(GLOB PS2_THREAD_SOURCES ${SDL2_SOURCE_DIR}/src/thread/generic/SDL_systls.c ${SDL2_SOURCE_DIR}/src/thread/generic/SDL_sysmutex.c ${SDL2_SOURCE_DIR}/src/thread/ps2/*.c)
     set(SOURCE_FILES ${SOURCE_FILES} ${PS2_THREAD_SOURCES})
-    # set(HAVE_SDL_THREADS TRUE)
-    set(HAVE_SDL_THREADS FALSE)
+    set(HAVE_SDL_THREADS TRUE)
   endif()
   if(SDL_TIMERS)
     set(SDL_TIMER_PS2 1)
