Adding SDL_main

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2508,6 +2508,8 @@ elseif(PSP)
     )
 
 elseif(PS2)
+  list(APPEND EXTRA_CFLAGS "-DPS2")
+
   file(GLOB PS2_MAIN_SOURCES ${SDL2_SOURCE_DIR}/src/main/ps2/*.c)
   set(SDLMAIN_SOURCES ${SDLMAIN_SOURCES} ${PS2_MAIN_SOURCES})
   
@@ -2565,6 +2567,12 @@ elseif(PS2)
   endif()
 
   list(APPEND EXTRA_LIBS
+      patches
+      dmakit
+      audsrv
+      mtap 
+      padx
+      fileXio
     )
 
 elseif(OS2)
