--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,6 +26,18 @@ if(PSP)
         psphprm
         psppower
     )
+elseif(PS2)
+link_libraries(
+        SDL2main
+        SDL2_test
+        SDL2-static
+        patches
+        dmakit
+        audsrv
+        mtap 
+        padx
+        fileXio
+)
 else()
     link_libraries(SDL2_test SDL2-static)
 endif()
