disabling some tests

--- a/.github/workflows/ps2.yaml
+++ b/.github/workflows/ps2.yaml
@@ -13,7 +13,7 @@ jobs:
         apk update 
         apk add cmake gmp mpc1 mpfr4 make
     - name: Configure CMake
-      run: cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=$PS2DEV/ps2sdk/ps2dev.cmake -DSDL_TEST=ON
+      run: cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=$PS2DEV/ps2sdk/ps2dev.cmake -DSDL_TESTS=ON
     - name: Build
       run: cmake --build build
     
