Add PSP automation tests
Upload result of automation test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -327,6 +327,7 @@ if(PSP)
         testatomic
         testaudiocapture
         testaudioinfo
+        testautomation
         testbounds
         testdisplayinfo
         testdraw2
