--- a/.github/workflows/psp.yaml
+++ b/.github/workflows/psp.yaml
@@ -22,6 +22,18 @@ jobs:
           -DCMAKE_INSTALL_PREFIX=prefix
     - name: Build
       run: cmake --build build --config Release
+    
+    - name: Get short SHA
+      id: slug
+      run: echo "::set-output name=sha8::$(echo ${GITHUB_SHA} | cut -c1-8)"
+    - name: Upload test artifacts
+      if: ${{ success() }}
+      uses: actions/upload-artifact@v3
+      with:
+        name: tests-${{ steps.slug.outputs.sha8 }}
+        path: |
+          build/test
+
     - name: Install
       run: |
         echo "SDL2_DIR=$(pwd)/prefix" >> $GITHUB_ENV
@@ -47,3 +59,30 @@ jobs:
         export PKG_CONFIG_PATH=${{ env.SDL2_DIR }}/lib/pkgconfig
         export EXTRA_LDFLAGS="-L$PSPDEV/lib -L$PSPDEV/psp/lib -L$PSPDEV/psp/sdk/lib"
         cmake/test/test_pkgconfig.sh
+
+  execute:
+    needs: [psp]
+    runs-on: ubuntu-latest
+    container: ghcr.io/hrydgard/ppsspp:latest
+
+    steps:
+    - name: Get short SHA
+      id: slug
+      run: echo "::set-output name=sha8::$(echo ${GITHUB_SHA} | cut -c1-8)"
+
+    - name: Download artifact
+      uses: actions/download-artifact@v1
+      with:
+        name: tests-${{ steps.slug.outputs.sha8 }}
+    
+    - name: Execute Automation tests
+      run: |
+        PPSSPPHeadless tests-${{ steps.slug.outputs.sha8 }}/sdl-testautomation/EBOOT.PBP --log
+
+    - name: Upload SDL Log
+      if: ${{ success() }}
+      uses: actions/upload-artifact@v3
+      with:
+        name: tests-${{ steps.slug.outputs.sha8 }}
+        path: |
+          tests-${{ steps.slug.outputs.sha8 }}/sdl-testautomation/SDL_Log.txt
